RESOLVED FIXED 245908
[LBSE] Assure <foreignObject> HTML descendants create a new formatting context
https://bugs.webkit.org/show_bug.cgi?id=245908
Summary [LBSE] Assure <foreignObject> HTML descendants create a new formatting context
Nikolas Zimmermann
Reported 2022-09-30 16:05:24 PDT
This breaks e.g. margin handling for block-children of <foreignObject> (broken since forever in Safari). The fix is trivial in LBSE: establish a new formatting context at the RenderSVGForeignObject boundary.
Attachments
Nikolas Zimmermann
Comment 1 2022-10-05 03:40:56 PDT
Radar WebKit Bug Importer
Comment 2 2022-10-07 16:06:18 PDT
EWS
Comment 3 2022-10-17 07:34:58 PDT
Committed 255626@main (912165516f6a): <https://commits.webkit.org/255626@main> Reviewed commits have been landed. Closing PR #5021 and removing active labels.
Ahmad Saleem
Comment 4 2022-10-17 07:58:26 PDT
*** Bug 23963 has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 5 2022-10-18 14:06:57 PDT
Re-opened since this is blocked by bug 246709
Hercules Hjalmarsson
Comment 6 2022-10-20 11:01:53 PDT
This was reverted in 255793@main due to introducing a crashing layout test. Bug information in bug 246709.
Hercules Hjalmarsson
Comment 7 2022-10-20 11:13:28 PDT
*** Bug 246709 has been marked as a duplicate of this bug. ***
Nikolas Zimmermann
Comment 8 2022-11-22 06:55:47 PST
EWS
Comment 9 2022-11-22 17:45:18 PST
Committed 256960@main (7fd975ae7427): <https://commits.webkit.org/256960@main> Reviewed commits have been landed. Closing PR #6735 and removing active labels.
Ahmad Saleem
Comment 10 2022-12-02 16:06:25 PST
*** Bug 53082 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.